# jackramp-zk

./: LICENSE  README.md
sp1_version/lib/src/: lib.rs
sp1_version/program/: Cargo.toml
sp1_version/program/elf/: riscv32im-succinct-zkvm-elf
sp1_version/program/src/: main.rs
sp1_version/script/: Cargo.toml  JackRampContract.json
sp1_version/script/src/: types.rs
transfer/lib/: Cargo.toml
transfer/lib/src/: lib.rs
transfer/program/: Cargo.toml
transfer/program/elf/: riscv32im-succinct-zkvm-elf
transfer/program/src/: main.rs  types.rs
transfer/script/: Cargo.toml
transfer/script/src/: main.rs  types.rs
transfer_zkrust/: Cargo.toml
transfer_zkrust/src/: main.rs  types.rs
