[package]
name = "transfer_zkrust"
version = "0.1.0"
edition = "2021"

[dependencies]
zk_rust_io = { git = "https://github.com/erhant/zkRust" }
reqwest = { version = "0.11", features = ["json", "rustls", "blocking"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
alloy-sol-types = "0.8.8"
alloy-primitives = "0.8.8"