[package]
name = "script"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }
aligned-sdk = { git = "https://github.com/yetanotherco/aligned_layer", tag="v0.9.2" }
ethers = { tag = "v2.0.15-fix-reconnections", features = [
    "ws",
    "rustls",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
rpassword = "7.3.1"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.5.8", features = ["derive"] }
anyhow = "1.0.86"
log = "0.4.21"
hex = "0.4.3"
dialoguer = "0.11.0"
reqwest = { version = "0.11", features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zktransfer-lib = { path = "../lib" }
alloy-sol-types = "0.8.8"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1" }